--- a/HappyGurpurab.html
+++ b/HappyGurpurab.html
@@ -68,16 +68,64 @@
             transform: scale(3) translate(var(--x), var(--y));
         }
     }
+
+    /* Overlay styling */
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        cursor: pointer;
+        flex-direction: column;
+        z-index: 10;
+    }
+    #playButton {
+        background-color: #FFD700;
+        color: #282828;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 1.2em;
+        cursor: pointer;
+        margin-top: 10px;
+    }
 </style>
 </head>
 <body>
+<div id="overlay">
+    <div>Click to play Shabad</div>
+    <button id="playButton" onclick="startAudio()">Play Shabad</button>
+</div>
+
 <div class="container">
     <h1>Guru Nanak Dev Ji de Gurpurab diyan lakh lakh vadhiyaan</h1>
-<img src="guru_nanak.jpg" alt="Guru Nanak Dev Ji">
+    <img src="guru_nanak.jpg" alt="Guru Nanak Dev Ji">
     <p>"Nanak Naam Chardi Kala, Tere Bhane Sarbat Da Bhala" - Always wish for the wellbeing of all.</p>
 </div>
 
+<audio id="shabadAudio" loop>
+    <source src="Aar_Nanak_Paar_Nanak.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
 <script>
+    // Start audio playback and hide overlay
+    function startAudio() {
+        const audio = document.getElementById('shabadAudio');
+        audio.play().then(() => {
+            document.getElementById('overlay').style.display = 'none';
+        }).catch(error => {
+            console.log("Audio play failed:", error);
+        });
+    }
+
     // Generate random fireworks
     function createFirework() {
         const firework = document.createElement("div");
